# Stellarator-Tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup_cmake
.github/workflows/: ci_debug_test.yaml  ci_doxygen.yaml  ci_intel_master.yaml  ci_test.yaml  ci_test_master.yaml
Documentation/: architecture.dox  build_system.dox  class anatomy.dox  doxygen.dox  main page.dox  testing.dox
